Click event set up to load in a viewSwapped page of games filtered by genres

--- a/css/layout.css
+++ b/css/layout.css
@@ -12,3 +12,11 @@
 .col-third {
   flex-basis: calc(100% / 3);
 }
+
+.col-full {
+  flex-basis: 100%;
+}
+
+.col-six {
+  flex-basis: calc(100% / 6);
+}
