Feature #1(filter-games-by-genre) => Complete

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,4 +88,9 @@ img {
   .container {
     max-width: 400px;
   }
+
+  .fa-solid.fa-filter.fa-lg,
+  .fa-solid.fa-magnifying-glass.fa-lg {
+    display: none;
+  }
 }
