--- a/css/styles.css
+++ b/css/styles.css
@@ -129,3 +129,25 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+@media (width < 780px) {
+  .col-one-third {
+    flex-basis: 100%;
+    margin: 0 2rem;
+    text-align: center;
+  }
+
+  .col-two-thirds {
+    flex-basis: 100%;
+    text-align: center;
+  }
+
+  .description-paragraph {
+    margin-block-end: 3rem;
+  }
+
+  .flex-official {
+    display: flex;
+    align-items: start;
+  }
+}
