renderGamePage function updated for feature 4. getTrailer function created for feature 4

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,3 +151,12 @@ a {
     align-items: start;
   }
 }
+
+.trailer-heading {
+  text-align: center;
+}
+
+.trailer {
+  border: 2px solid green;
+  height: 80%;
+}
