--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,13 @@ a {
   text-align: center;
 }
 
-.trailer {
-  border: 2px solid green;
-  height: 80%;
+.trailer-wrapper {
+  position: relative;
+}
+
+.fa-play {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
