--- a/css/styles.css
+++ b/css/styles.css
@@ -145,11 +145,10 @@ a {
   .description-paragraph {
     margin-block-end: 3rem;
   }
+}
 
-  .flex-official {
-    display: flex;
-    align-items: start;
-  }
+.trailer-div {
+  margin-top: 2.5rem;
 }
 
 .trailer-heading {
@@ -162,6 +161,8 @@ a {
 
 .trailer {
   border-radius: 0.5rem;
+  border: 1px solid #fff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .fa-play {
@@ -174,4 +175,6 @@ a {
 video {
   width: 100%;
   border-radius: 0.5rem;
+  border: 1px solid #fff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
